Use workflow's service account to run associated pods
